<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Clover Network, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <ImageView
      android:id="@+id/myImageView"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:src="@drawable/sushi_landscape"
      android:alpha="0.4"
      android:layout_alignParentEnd="false"
      android:scaleType="centerCrop"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">
      <TextView
          android:id="@+id/myImageViewText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/please_enter_your_phone"
          android:textColor="#000000"
          android:textSize="36sp"
          android:layout_marginLeft="1dp"
          android:layout_marginRight="1dp"
          android:textStyle="bold"/>
      <EditText
          android:id="@+id/newphoneNumberField"
          android:layout_width="match_parent"
          android:layout_height="57dp"
          android:textStyle="bold"
          android:textSize="36sp"
          android:cursorVisible="false"
          android:clickable="false"
          android:background="#00000000"
          android:inputType="phone"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:layout_marginLeft="1dp"
          android:layout_marginRight="1dp"
          android:textAlignment="center"
          android:gravity="center"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:background="@android:color/black"/>
    </LinearLayout>
    <TableLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/keyboard"
        android:layout_width="425dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:weightSum="4"
        android:showDividers="beginning|middle|end">
      <TableRow
          style="@style/keyboard_row"
          android:layout_height="0dp"
          android:layout_weight="1">
        <TextView
            android:id="@+id/t9_key_1"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/one"/>
        <TextView
            android:id="@+id/t9_key_2"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/two"/>
        <TextView
            android:id="@+id/t9_key_3"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/three"/>
      </TableRow>
      <TableRow
          style="@style/keyboard_row"
          android:layout_height="0dp"
          android:layout_weight="1">
        <TextView
            android:id="@+id/t9_key_4"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/four"/>
        <TextView
            android:id="@+id/t9_key_5"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/five"/>
        <TextView
            android:id="@+id/t9_key_6"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/six"/>
      </TableRow>
      <TableRow
          style="@style/keyboard_row"
          android:layout_height="0dp"
          android:layout_weight="1">
        <TextView
            android:id="@+id/t9_key_7"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/seven"/>
        <TextView
            android:id="@+id/t9_key_8"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/eight"/>
        <TextView
            android:id="@+id/t9_key_9"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/nine"/>
      </TableRow>
      <TableRow
          style="@style/keyboard_row"
          android:layout_height="0dp"
          android:layout_weight="1">
        <TextView android:id="@+id/login_button"
            style="@style/keyboard_button"
            android:text="GO"/>
        <TextView android:id="@+id/t9_key_0"
            style="@style/keyboard_number_button"
            android:textSize="35sp"
            android:text="@string/zero"/>
        <LinearLayout
            style="@style/keyboard_number_button"
            android:orientation="vertical">
          <ImageView
              android:layout_height="40dp"
              android:layout_width="wrap_content"
              android:id="@+id/t9_key_backspace"
              android:scaleType="centerInside"
              android:tint="@android:color/black"
              android:src="@drawable/keypad_view_del_button_gray"/>
        </LinearLayout>
      </TableRow>
    </TableLayout>
  </LinearLayout>
</RelativeLayout>
