<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clover.cfp.examples.CustomerLoginFragment">
    <ImageView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
        android:alpha="0.4"
        android:contentDescription="@string/login_background"/>
    <!-- TODO: Update blank fragment layout -->

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/login_message_font_size"
            android:hint="@string/phonenumber_hint"
            android:text="@string/login_message"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/phoneNumberField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </LinearLayout>
</FrameLayout>
