<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Clover Network, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    android:id="@+id/basic_conversation_port_example"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/basic_conversational_custom_activity"
      android:gravity="center"
      android:textColor="@android:color/black"
      android:textSize="20sp"
      android:layout_marginBottom="20dp"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="10dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/startactivitypayloadtext"
          android:id="@+id/startLabel"
          android:textSize="16sp"
          android:textStyle="bold"
          android:visibility="visible"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/payload"
          android:text="@string/startactivityforresult_payload"
          android:textSize="16sp"
          android:visibility="visible"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp">
      <ImageView
          android:id="@+id/register_image"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:scaleType="fitCenter"
          android:src="@drawable/reg"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/messagePayload"
          android:text="@string/incoming_message_payload_here"
          android:textSize="16sp"
          android:gravity="left"
          android:background="@drawable/rounded_corner_green"
          android:visibility="visible"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp">
      <TextView
          android:layout_width="215dp"
          android:layout_height="wrap_content"
          android:id="@+id/message_payload"
          android:textSize="16sp"
          android:layout_gravity="fill"
          android:gravity="right"
          android:background="@drawable/rounded_corner_blue"
          android:visibility="visible"/>
      <ImageView
          android:id="@+id/device_image"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:scaleType="fitCenter"
          android:src="@drawable/flex"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
      <LinearLayout
          android:id="@+id/send_window"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="right|center_vertical"
          android:background="@drawable/bottom_border"
          android:layout_marginBottom="10dp"
          android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:id="@+id/outMessagePayload"
            android:text="@string/response_text"
            android:textSize="16sp"
            android:padding="5dp"
            android:visibility="visible"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:text="@string/send"
            android:onClick="messageClicked"
            android:id="@+id/button1"
            android:visibility="visible"
            android:textAlignment="center"
            android:background="@drawable/button_green"
            android:textColor="@android:color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:enabled="true"/>
      </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="bottom|center">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/end_activity_payload"
          android:textSize="16sp"
          android:textStyle="bold"
          android:visibility="visible"/>
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/resultPayload"
          android:gravity="center"
          android:text="@string/activity_finish_payload"
          android:textSize="16sp"/>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/finish"
          android:onClick="finishClicked"
          android:id="@+id/button"
          android:paddingStart="30dp"
          android:paddingEnd="30dp"
          android:background="@drawable/button_border"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>
