<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/basic_conversation_land_example"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal">
  <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Basic Conversational Custom Activity"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_marginBottom="50dp"/>

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginBottom="30dp">
      <TextView
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:text="@string/StartActivityPayloadText"
          android:id="@+id/startLabel"
          android:textSize="20sp"
          android:textStyle="bold"
          android:visibility="visible"/>

      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/payload"
                android:text="@string/startactivityforresult_payload"
                android:textSize="20sp"
                android:visibility="visible"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp"
                  android:layout_marginEnd="200dp">

      <ImageView android:id="@+id/register_image"
                 android:layout_width="75dp"
                 android:layout_height="50dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/reg"/>
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/messagePayload"
                android:text="@string/incoming_message_payload_here"
                android:textSize="20sp"
                android:gravity="left"
                android:background="@drawable/rounded_corner_green"
                android:visibility="visible"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="right"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="200dp">

      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/message_payload"
                android:textSize="20sp"
                android:gravity="right"
                android:background="@drawable/rounded_corner_blue"
                android:visibility="visible"/>
      <ImageView android:id="@+id/device_image"
                 android:layout_width="75dp"
                 android:layout_height="50dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/mini"/>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
      <LinearLayout
          android:id="@+id/send_window"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="right|center_vertical"
          android:background="@drawable/bottom_border"
          android:layout_alignParentBottom="true">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/outMessagePayload"
                  android:text="@string/response_text"
                  android:textSize="20sp"
                  android:layout_marginEnd="10dp"
                  android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Send"
            android:onClick="messageClicked"
            android:id="@+id/button1"
            android:visibility="visible"
            android:textAlignment="center"
            android:background="@drawable/button_green"
            android:textColor="@android:color/white"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:enabled="true"/>

      </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp"
                  android:gravity="bottom">
      <TextView
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:text="End Activity Payload:"
          android:textSize="20sp"
          android:textStyle="bold"
          android:visibility="visible"/>

      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/resultPayload"
          android:text="@string/activity_finish_payload"
          android:layout_marginEnd="10dp"
          android:textSize="20sp"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/finish"
          android:onClick="finishClicked"
          android:id="@+id/button"
          android:paddingStart="30dp"
          android:paddingEnd="30dp"
          android:background="@drawable/button_border"/>

    </LinearLayout>
  </LinearLayout>

</LinearLayout>
